--- a/project/Saved/Config/WindowsEditor/GameUserSettings.ini
+++ b/project/Saved/Config/WindowsEditor/GameUserSettings.ini
@@ -1,12 +1,12 @@
 ;METADATA=(Diff=true, UseCommands=true)
 [/Script/Engine.GameUserSettings]
-bUseVSync=False
+bUseVSync=True
 bUseDynamicResolution=False
-ResolutionSizeX=1920
-ResolutionSizeY=1200
+ResolutionSizeX=1600
+ResolutionSizeY=900
 LastUserConfirmedResolutionSizeX=1920
 LastUserConfirmedResolutionSizeY=1200
-FullscreenMode=1
+FullscreenMode=2
 LastConfirmedFullscreenMode=1
 PreferredFullscreenMode=1
 Version=5
