recoding player movement again only slide not ready

--- a/project/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/project/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -393,8 +393,13 @@ EdGraphNode_Comment=K2Node_VariableGet.DefaultValueCategory.ArrowComponent
 K2Node_InputAxisEvent=K2Node_VariableGet.DefaultValueCategory.ArrowComponent
 K2Node_Timeline=K2Node_VariableGet.DefaultValueCategory.ArrowComponent
 K2Node_FunctionResult=K2Node_VariableGet.DefaultValueCategory.ArrowComponent
-K2Node=
+K2Node=K2Node_VariableGet.DefaultValueCategory.ArrowComponent
 K2Node_CallFunction=K2Node_VariableGet.DefaultValueCategory.ArrowComponent
+K2Node_CustomEvent=K2Node_VariableGet.DefaultValueCategory.ArrowComponent
+GLTFMaterialExportOptions=K2Node_VariableGet.DefaultValueCategory.ArrowComponent
+ControlRigTestData=K2Node_VariableGet.DefaultValueCategory.ArrowComponent
+K2Node_InputAction=K2Node_VariableGet.DefaultValueCategory.ArrowComponent
+MulticastInlineDelegatePropertyWrapper=K2Node_VariableGet.DefaultValueCategory.ArrowComponent
 
 [EditorStartup]
 LastLevel=/Game/Maps/Player
@@ -406,14 +411,15 @@ MRUItem1=/Game/MainmenuMap
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=EnumEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=
-RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
@@ -450,7 +456,7 @@ FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 [Directories2]
 UNR=../../../../../../s4jala-files/github/Stupid-inc-unreal-project/project/Content/Maps
 UNR========
-UNR=../../../../Stupid-inc-unreal-project/project/Content/Maps
+UNR=../../../../../../s4jala-files/2/Stupid-inc-unreal-project/project/Content/Maps
 BRUSH=../../../../../../s4jala-files/github/Stupid-inc-unreal-project/project/Content/
 FBX=../../../../../../s4jala-files/github/Stupid-inc-unreal-project/project/Content/
 FBXAnim=../../../../../../s4jala-files/github/Stupid-inc-unreal-project/project/Content/
@@ -1828,11 +1834,11 @@ SequencerWidgets.LastCompileMethod=External
 
 [Python]
 LastDirectory=
-RecentsFiles=F:/Unreal5/UE_5.6/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/Program Files/Epic Games/UE_5.6/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+RecentsFiles=F:/Unreal5/UE_5.6/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [ContentBrowser]
-ContentBrowserDrawer.SelectedPaths=/Game/UI/PlayerUi
+ContentBrowserDrawer.SelectedPaths=/Game/Blueprints
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.SourcesExpanded=True
 ContentBrowserDrawer.IsLocked=False
@@ -1853,21 +1859,21 @@ ContentBrowserDrawer.SelectedCollections=
 ContentBrowserDrawer.ExpandedCollections=
 ContentBrowserDrawer.CollectionAreaExpanded=False
 ContentBrowserDrawer.CollectionSearchAreaExpanded=False
-ContentBrowserDrawer.ThumbnailSizeGrid=2
+ContentBrowserDrawer.ThumbnailSizeGrid=3
 ContentBrowserDrawer.ThumbnailSizeList=2
 ContentBrowserDrawer.ThumbnailSizeCustom=2
 ContentBrowserDrawer.ThumbnailSizeColumn=0
 ContentBrowserDrawer.CurrentViewType=1
-ContentBrowserDrawer.ZoomScale=0
+ContentBrowserDrawer.ZoomScale=0.800000012
 ContentBrowserDrawer.ListViewColumnsManuallyChangedOnce=False
 ContentBrowserDrawer.ColumnViewColumnsManuallyChangedOnce=False
 ContentBrowserDrawer.JumpMRU=/All/Game/UI
-ContentBrowserDrawer.JumpMRU=/All/Game/UI/PlayerUi
-ContentBrowserDrawer.JumpMRU=/All/Game/StarterContent
 ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints
 ContentBrowserDrawer.JumpMRU=/All/Game
-ContentBrowserDrawer.JumpMRU=/All
 ContentBrowserDrawer.JumpMRU=/All/Game/Maps
+ContentBrowserDrawer.JumpMRU=/All/Game/StarterContent
+ContentBrowserDrawer.JumpMRU=/All
+ContentBrowserDrawer.JumpMRU=/All/Game/UI/PlayerUi
 ContentBrowserDrawer.JumpMRU=/All/Game/StarterContent/Architecture
 ContentBrowserDrawer.JumpMRU=/All/Game/StarterContent/Audio
 ContentBrowserDrawer.JumpMRU=/All/Game/StarterContent/Props
@@ -3050,27 +3056,33 @@ WP_DashStaminaBar_C.Rendering=True
 WP_DashStaminaBar_C.Navigation=True
 WP_DashStaminaBar_C.Designer=True
 WP_DashStaminaBar_C.Accessibility=True
+UserDefinedEnum.Description=True
+UserDefinedEnum.Enumerators=True
+MulticastInlineDelegatePropertyWrapper.DelegateInputs=True
+MulticastInlineDelegatePropertyWrapper.Variable=True
+MulticastInlineDelegatePropertyWrapper.DefaultValueCategory=True
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/UI/PlayerUi/WP_DashStaminaBar
-MRUItem1=/Game/UI/PlayerUi/WP_HealtBar
-MRUItem2=/Game/Blueprints/BF_FPS_Character
-MRUItem3=/Game/Maps/Player
-MRUItem4=/Game/Blueprints/Bullet
-MRUItem5=/Game/Blueprints/Ground_Assault_Trooper_A
-MRUItem6=/Game/Maps/Enemy1
-MRUItem7=/Game/Maps/MainmenuMap
-MRUItem8=/Game/Maps/Test
-MRUItem9=/Game/Blueprints/Doors/BP_P2_DoorHalf
-MRUItem10=/Game/Blueprints/Doors/BP_P2_Door
-MRUItem11=/Game/Blueprints/Doors/BP_P_Door
-MRUItem12=/Game/Blueprints/Doors/BP_P_DoorHalf
-MRUItem13=/Game/StarterContent/Props/SM_Door
-MRUItem14=/Game/UI/OptionsMenuWB
-MRUItem15=/Game/UI/MainMenu
-MRUItem16=/Game/UI/LevelSelectMenuWidget
-MRUItem17=/Game/Blueprints/GM_Gamemode
-MRUItem18=/Game/UI/Menugamemode
+MRUItem0=/Game/Blueprints/E_MovementState
+MRUItem1=/Game/UI/OptionsMenuWB
+MRUItem2=/Game/UI/MainMenu
+MRUItem3=/Game/UI/PlayerUi/WP_DashStaminaBar
+MRUItem4=/Game/Blueprints/BF_FPS_Character
+MRUItem5=/Game/UI/PlayerUi/WP_HealtBar
+MRUItem6=/Game/Maps/Player
+MRUItem7=/Game/Blueprints/Bullet
+MRUItem8=/Game/Blueprints/Ground_Assault_Trooper_A
+MRUItem9=/Game/Maps/Enemy1
+MRUItem10=/Game/Maps/MainmenuMap
+MRUItem11=/Game/Maps/Test
+MRUItem12=/Game/Blueprints/Doors/BP_P2_DoorHalf
+MRUItem13=/Game/Blueprints/Doors/BP_P2_Door
+MRUItem14=/Game/Blueprints/Doors/BP_P_Door
+MRUItem15=/Game/Blueprints/Doors/BP_P_DoorHalf
+MRUItem16=/Game/StarterContent/Props/SM_Door
+MRUItem17=/Game/UI/LevelSelectMenuWidget
+MRUItem18=/Game/Blueprints/GM_Gamemode
+MRUItem19=/Game/UI/Menugamemode
 
 [UMGEditor.Designer]
 bCommonResolutionSelected=False
@@ -3183,8 +3195,8 @@ bNavigationToolVisible=False
 
 [DetailPropertyExpansion]
 Button="\"Object\" \"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" "
-ContentWidget="\"Object\" "
-PanelWidget="\"Object\" "
+ContentWidget="\"Object\" \"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" "
+PanelWidget="\"Object\" \"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" "
 Widget="\"Object\" "
 Visual="\"Object\" "
 Object="\"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" "
@@ -3247,6 +3259,15 @@ K2Node_InputAxisEvent="\"Object\" "
 K2Node_Event="\"Object\" "
 K2Node_EditablePinBase="\"Object\" "
 WP_DashStaminaBar_C="\"Object\" "
+CameraComponent="\"Object\" "
+BF_FPS_Character_C=
+UserDefinedEnum="\"Object\" "
+Enum="\"Object\" "
+Field="\"Object\" "
+GLTFMaterialExportOptions="\"Object\" "
+AssetUserData="\"Object\" "
+ControlRigTestData="\"Object\" "
+ControlRigReplay="\"Object\" "
 
 [AssetEditorToolkitTabLocation]
 /Game/UI/MainMenu.MainMenu=1
@@ -3266,6 +3287,7 @@ WP_DashStaminaBar_C="\"Object\" "
 /Game/Blueprints/Bullet.Bullet=1
 /Game/UI/PlayerUi/WP_HealtBar.WP_HealtBar=0
 /Game/UI/PlayerUi/WP_DashStaminaBar.WP_DashStaminaBar=0
+/Game/Blueprints/E_MovementState.E_MovementState=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -3290,8 +3312,8 @@ bNavigateToNativeFunctionsFromCallNodes=True
 bDoubleClickNavigatesToParent=True
 bEnableTypePromotion=True
 bShowPanelContextMenuForIncompatibleConnections=True
-TypePromotionPinDenyList=string
 TypePromotionPinDenyList=text
+TypePromotionPinDenyList=string
 BreakpointReloadMethod=RestoreAll
 bEnablePinValueInspectionTooltips=True
 bEnableNamespaceEditorFeatures=True
@@ -3376,14 +3398,18 @@ PreserveScaleRatio=True
 Theme0=New Theme
 
 [RecentColors]
-Color0=(R=48.941864,G=0.997698,B=0.604167,A=1.000000)
-Color1=(R=48.941879,G=0.997698,B=1.000000,A=1.000000)
-Color2=(R=0.000000,G=0.990200,B=0.617207,A=1.000000)
-Color3=(R=47.594940,G=0.929412,B=1.000000,A=0.070588)
+Color0=(R=358.987122,G=0.905141,B=1.000000,A=1.000000)
+Color1=(R=359.936951,G=1.000000,B=0.244792,A=1.000000)
+Color2=(R=0.144745,G=0.991432,B=1.000000,A=0.090196)
+Color3=(R=13.171570,G=1.000000,B=1.000000,A=0.000000)
 Color4=(R=13.171570,G=1.000000,B=1.000000,A=1.000000)
-Color5=(R=13.171570,G=1.000000,B=1.000000,A=0.000000)
-Color6=(R=13.171570,G=1.000000,B=1.000000,A=0.000000)
-Color7=(R=13.171570,G=1.000000,B=1.000000,A=0.000000)
-Color8=(R=0.144745,G=0.991432,B=1.000000,A=0.090196)
-Color9=(R=359.936951,G=1.000000,B=0.244792,A=1.000000)
+Color5=(R=47.594940,G=0.929412,B=1.000000,A=0.070588)
+Color6=(R=0.000000,G=0.990200,B=0.617207,A=1.000000)
+Color7=(R=48.941879,G=0.997698,B=1.000000,A=1.000000)
+Color8=(R=48.941864,G=0.997698,B=0.604167,A=1.000000)
+
+[DetailCategoriesAdvanced]
+CharacterMovementComponent.Character Movement: Jumping / Falling=True
+CharacterMovementComponent.Character Movement (Networking)=False
+MulticastInlineDelegatePropertyWrapper.Variable=False
 
