--- a/project/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/project/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -391,7 +391,7 @@ MRUItem0=/Game/Maps/MainmenuMap
 MRUItem1=/Game/MainmenuMap
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 DebuggerAttached=False
 RecentAssetEditors=TextureEditor
 RecentAssetEditors=WidgetBlueprintEditor
@@ -418,8 +418,6 @@ RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
-OpenAssetsAtExit=/Game/UI/Button_menu.Button_menu
-OpenAssetsAtExit=/Game/UI/MainMenu.MainMenu
 
 [RootWindow]
 ScreenPosition=X=317.000 Y=213.000
@@ -1894,14 +1892,18 @@ ContentBrowserTab1.CurrentViewType=1
 ContentBrowserTab1.ZoomScale=0
 ContentBrowserTab1.ListViewColumnsManuallyChangedOnce=False
 ContentBrowserTab1.ColumnViewColumnsManuallyChangedOnce=False
+ContentBrowserTab1.JumpMRU=/All/Game/UI/UI_assets
 ContentBrowserTab1.JumpMRU=/All/Game/UI
+ContentBrowserTab1.JumpMRU=/All/Game/UI/Fonts
+ContentBrowserTab1.JumpMRU=/Game
+ContentBrowserTab1.JumpMRU=/All/Game/UI/Font
 ContentBrowserTab1.JumpMRU=/All/Game/UI/Almendra
-ContentBrowserTab1.JumpMRU=/All/Game/StarterContent
+ContentBrowserTab1.JumpMRU=/All/Game
 ContentBrowserTab1.JumpMRU=/All/Game/Maps
+ContentBrowserTab1.JumpMRU=/All/Game/StarterContent
 ContentBrowserTab1.JumpMRU=/All/Game/StarterContent/Audio
 ContentBrowserTab1.JumpMRU=/All/Game/StarterContent/Maps
 ContentBrowserTab1.JumpMRU=/All/Game/Blueprints
-ContentBrowserTab1.JumpMRU=/All/Game
 ContentBrowserTab1.JumpMRU=/All
 AssetDialog.ThumbnailSizeGrid=3
 AssetDialog.ThumbnailSizeList=3
@@ -3141,11 +3143,11 @@ bNavigationToolVisible=False
 [DetailPropertyExpansion]
 Button="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.ImageSize\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.ImageSize\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings\" \"Object.Appearance.WidgetStyle.Disabled.OutlineSettings.Color\" \"Object.Render Transform.RenderTransform\" "
 ContentWidget="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.ImageSize\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.ImageSize\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings\" \"Object.Appearance.WidgetStyle.Disabled.OutlineSettings.Color\" \"Object.Render Transform.RenderTransform\" "
-PanelWidget="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.ImageSize\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.ImageSize\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings\" \"Object.Appearance.WidgetStyle.Disabled.OutlineSettings.Color\" \"Object.Render Transform.RenderTransform\" "
-Widget="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.ImageSize\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.ImageSize\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings\" \"Object.Appearance.WidgetStyle.Disabled.OutlineSettings.Color\" \"Object.Render Transform.RenderTransform\" "
-Visual="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.ImageSize\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.ImageSize\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings\" \"Object.Appearance.WidgetStyle.Disabled.OutlineSettings.Color\" \"Object.Render Transform.RenderTransform\" "
+PanelWidget="\"Object\" \"Object.Render Transform.RenderTransform\" "
+Widget="\"Object\" \"Object.Render Transform.RenderTransform\" "
+Visual="\"Object\" \"Object.Render Transform.RenderTransform\" "
 Object="\"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" "
-Object="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.ImageSize\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.ImageSize\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings\" \"Object.Appearance.WidgetStyle.Disabled.OutlineSettings.Color\" \"Object.Render Transform.RenderTransform\" "
+Object="\"Object\" \"Object.Render Transform.RenderTransform\" "
 TextBlock="\"Object\" \"Object.Layout.Slot.Object.Layout.Layout|Horizontal Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" "
 TextLayoutWidget="\"Object\" \"Object.Layout.Slot.Object.Layout.Layout|Horizontal Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" "
 MassSettings="\"Object\" \"Object.Mass\" "
@@ -3161,7 +3163,7 @@ PrimitiveComponent="\"Object\" "
 SceneComponent="\"Object\" "
 ActorComponent="\"Object\" "
 MainMenu_C="\"Object\" "
-UserWidget="\"Object\" "
+UserWidget="\"Object\" \"Object.Render Transform.RenderTransform\" "
 CanvasPanel="\"Object\" "
 VerticalBox="\"Object\" \"Object.Render Transform.RenderTransform\" "
 HorizontalBox="\"Object\" \"Object.Layout.Slot.Object.Layout.Layout|Button Slot.Padding\" \"Object.Render Transform.RenderTransform\" "
@@ -3329,7 +3331,7 @@ Texture2D="\"Object\" "
 Texture="\"Object\" "
 Font="\"Object\" \"Object.Font\" "
 ScaleBox="\"Object\" \"Object.Layout.Slot.Object.Layout.Layout|Button Slot.Padding\" \"Object.Render Transform.RenderTransform\" "
-Button_menu_C="\"Object\" "
+Button_menu_C="\"Object\" \"Object.Render Transform.RenderTransform\" "
 
 [AssetEditorToolkitTabLocation]
 /Game/UI/MainMenu.MainMenu=1
@@ -3375,8 +3377,8 @@ bNavigateToNativeFunctionsFromCallNodes=True
 bDoubleClickNavigatesToParent=True
 bEnableTypePromotion=True
 bShowPanelContextMenuForIncompatibleConnections=True
-TypePromotionPinDenyList=text
 TypePromotionPinDenyList=string
+TypePromotionPinDenyList=text
 BreakpointReloadMethod=RestoreAll
 bEnablePinValueInspectionTooltips=True
 bEnableNamespaceEditorFeatures=True
