--- a/project/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/project/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -391,15 +391,16 @@ MRUItem0=/Game/Maps/MainmenuMap
 MRUItem1=/Game/MainmenuMap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
-RecentAssetEditors=TextureEditor
 RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=TextureEditor
+RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=FontEditor
+RecentAssetEditors=TextureEditor
+RecentAssetEditors=TextureEditor
 RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=FontEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=
 RecentAssetEditors=
@@ -418,6 +419,10 @@ RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
+OpenAssetsAtExit=/Game/UI/ExitOptions.ExitOptions
+OpenAssetsAtExit=/Game/UI/MainMenu.MainMenu
+OpenAssetsAtExit=/Game/UI/LevelSelectMenuWidget.LevelSelectMenuWidget
+OpenAssetsAtExit=/Game/UI/Button_menu.Button_menu
 
 [RootWindow]
 ScreenPosition=X=317.000 Y=213.000
@@ -1865,7 +1870,7 @@ ContentBrowserDrawer.JumpMRU=/All
 ContentBrowserDrawer.JumpMRU=/Game
 ContentBrowserDrawer.JumpMRU=/All/Game/Maps/PlayerTestMap
 ContentBrowserDrawer.JumpMRU========
-ContentBrowserTab1.SelectedPaths=/Game/UI/UI_assets
+ContentBrowserTab1.SelectedPaths=/Game/UI
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.IsLocked=False
@@ -2961,6 +2966,7 @@ Texture2D.Adjustments=True
 Texture2D.File Path=True
 Texture2D.Compositing=True
 Texture2D.Interchange=True
+Texture2D.Interchange=True
 Font.Font=True
 Font.RuntimeFont=True
 ScaleBox.Layout=True
@@ -2999,37 +3005,47 @@ Button_menu_C.Localization=True
 Button_menu_C.Events=True
 Button_menu_C.Default=True
 Button_menu_C.Designer=True
-Texture2D.Interchange =True
 MulticastInlineDelegatePropertyWrapper.DelegateInputs=True
 MulticastInlineDelegatePropertyWrapper.Variable=True
 MulticastInlineDelegatePropertyWrapper.DefaultValueCategory=True
+BackgroundBlur.Localization=True
+BackgroundBlur.Navigation=True
+BackgroundBlur.Rendering=True
+BackgroundBlur.Performance=True
+BackgroundBlur.Render Transform=True
+BackgroundBlur.Behavior=True
+BackgroundBlur.Accessibility=True
+BackgroundBlur.Appearance=True
+BackgroundBlur.Content=True
+BackgroundBlur.Layout=True
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/UI/UI_assets/Button_arrow
-MRUItem1=/Game/UI/MainMenu
-MRUItem2=/Game/UI/UI_assets/RotF_logo_1_
-MRUItem3=/Game/UI/Button_menu
+MRUItem0=/Game/UI/Button_menu
+MRUItem1=/Game/UI/LevelSelectMenuWidget
+MRUItem2=/Game/UI/MainMenu
+MRUItem3=/Game/UI/ExitOptions
 MRUItem4=/Game/Maps/MainmenuMap
-MRUItem5=/Engine/EngineFonts/Roboto
-MRUItem6=/Game/UI/OptionsMenuWB
-MRUItem7=/Game/UI/LevelSelectMenuWidget
-MRUItem8=/Game/StarterContent/Maps/Minimal_Default
-MRUItem9=/Game/StarterContent/Maps/Advanced_Lighting
-MRUItem10=/Game/StarterContent/Maps/StarterMap
-MRUItem11=/Game/UI/WBP_Layer
-MRUItem12=/Game/Maps/Test
-MRUItem13=/Game/Blueprints/BF_FPS_Character
-MRUItem14=/Game/Maps/Player
-MRUItem15=/Game/Maps/NewMap_backup_HLOD0_Instancing
-MRUItem16=/Game/Maps/NewMap_backup
-MRUItem17=/Game/Maps/NewMap
-MRUItem18=/Game/Blueprints/Doors/BP_P2_DoorHalf
-MRUItem19=/Game/Blueprints/Doors/BP_P2_Door
-MRUItem20=/Game/Blueprints/Doors/BP_P_Door
-MRUItem21=/Game/Blueprints/Doors/BP_P_DoorHalf
-MRUItem22=/Game/StarterContent/Props/SM_Door
-MRUItem23=/Game/Blueprints/GM_Gamemode
-MRUItem24=/Game/UI/Menugamemode
+MRUItem5=/Game/UI/UI_assets/Button_arrow
+MRUItem6=/Game/UI/UI_assets/RotF_logo_1_
+MRUItem7=/Engine/EngineFonts/Roboto
+MRUItem8=/Game/UI/OptionsMenuWB
+MRUItem9=/Game/StarterContent/Maps/Minimal_Default
+MRUItem10=/Game/StarterContent/Maps/Advanced_Lighting
+MRUItem11=/Game/StarterContent/Maps/StarterMap
+MRUItem12=/Game/UI/WBP_Layer
+MRUItem13=/Game/Maps/Test
+MRUItem14=/Game/Blueprints/BF_FPS_Character
+MRUItem15=/Game/Maps/Player
+MRUItem16=/Game/Maps/NewMap_backup_HLOD0_Instancing
+MRUItem17=/Game/Maps/NewMap_backup
+MRUItem18=/Game/Maps/NewMap
+MRUItem19=/Game/Blueprints/Doors/BP_P2_DoorHalf
+MRUItem20=/Game/Blueprints/Doors/BP_P2_Door
+MRUItem21=/Game/Blueprints/Doors/BP_P_Door
+MRUItem22=/Game/Blueprints/Doors/BP_P_DoorHalf
+MRUItem23=/Game/StarterContent/Props/SM_Door
+MRUItem24=/Game/Blueprints/GM_Gamemode
+MRUItem25=/Game/UI/Menugamemode
 
 [UMGEditor.Designer]
 bCommonResolutionSelected=False
@@ -3143,13 +3159,13 @@ bNavigationToolVisible=False
 [DetailPropertyExpansion]
 Button="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.ImageSize\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.ImageSize\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings\" \"Object.Appearance.WidgetStyle.Disabled.OutlineSettings.Color\" \"Object.Render Transform.RenderTransform\" "
 ContentWidget="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.ImageSize\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.ImageSize\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings\" \"Object.Appearance.WidgetStyle.Disabled.OutlineSettings.Color\" \"Object.Render Transform.RenderTransform\" "
-PanelWidget="\"Object\" \"Object.Render Transform.RenderTransform\" "
-Widget="\"Object\" \"Object.Render Transform.RenderTransform\" "
-Visual="\"Object\" \"Object.Render Transform.RenderTransform\" "
+PanelWidget="\"Object\" \"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" "
+Widget="\"Object\" \"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" "
+Visual="\"Object\" \"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" "
 Object="\"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" "
-Object="\"Object\" \"Object.Render Transform.RenderTransform\" "
-TextBlock="\"Object\" \"Object.Layout.Slot.Object.Layout.Layout|Horizontal Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" "
-TextLayoutWidget="\"Object\" \"Object.Layout.Slot.Object.Layout.Layout|Horizontal Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" "
+Object="\"Object\" \"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" "
+TextBlock="\"Object\" \"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" "
+TextLayoutWidget="\"Object\" \"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" "
 MassSettings="\"Object\" \"Object.Mass\" "
 DeveloperSettings="\"Object\" "
 InputSettings="\"Object\" \"Object.Bindings.ActionMappings.ActionMappings[0]\" \"Object.Bindings.ActionMappings.ActionMappings[1]\" \"Object.Bindings.ActionMappings.ActionMappings[2]\" \"Object.Bindings.AxisMappings.AxisMappings[0]\" \"Object.Bindings.AxisMappings.AxisMappings[1]\" \"Object.Bindings.AxisMappings.AxisMappings[2]\" \"Object.Bindings.AxisMappings.AxisMappings[3]\" \"Object.Bindings.AxisMappings.AxisMappings[4]\" \"Object.Bindings.AxisMappings.AxisMappings[5]\" "
@@ -3163,10 +3179,10 @@ PrimitiveComponent="\"Object\" "
 SceneComponent="\"Object\" "
 ActorComponent="\"Object\" "
 MainMenu_C="\"Object\" "
-UserWidget="\"Object\" \"Object.Render Transform.RenderTransform\" "
-CanvasPanel="\"Object\" "
-VerticalBox="\"Object\" \"Object.Render Transform.RenderTransform\" "
-HorizontalBox="\"Object\" \"Object.Layout.Slot.Object.Layout.Layout|Button Slot.Padding\" \"Object.Render Transform.RenderTransform\" "
+UserWidget="\"Object\" "
+CanvasPanel="\"Object\" \"Object.Render Transform.RenderTransform\" "
+VerticalBox="\"Object\" \"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" "
+HorizontalBox="\"Object\" \"Object.Render Transform.RenderTransform\" "
 OptionsMenuWB_C="\"Object\" "
 K2Node_SwitchInteger="\"Object\" "
 K2Node_Switch="\"Object\" "
@@ -3324,14 +3340,23 @@ HLODLayer="\"Object\" "
 Border="\"Object\" \"Object.Render Transform.RenderTransform\" "
 WBP_Widget_C="\"Object\" "
 WBP_Layer_C="\"Object\" \"Object.Render Transform.RenderTransform\" "
-LevelSelectMenuWidget_C="\"Object\" "
+LevelSelectMenuWidget_C="\"Object\" \"Object.Render Transform.RenderTransform\" "
 Image="\"Object\" \"Object.Appearance.Brush\" \"Object.Render Transform.RenderTransform\" "
 Overlay="\"Object\" \"Object.Render Transform.RenderTransform\" "
 Texture2D="\"Object\" "
 Texture="\"Object\" "
 Font="\"Object\" \"Object.Font\" "
-ScaleBox="\"Object\" \"Object.Layout.Slot.Object.Layout.Layout|Button Slot.Padding\" \"Object.Render Transform.RenderTransform\" "
-Button_menu_C="\"Object\" \"Object.Render Transform.RenderTransform\" "
+ScaleBox="\"Object\" \"Object.Render Transform.RenderTransform\" "
+Button_menu_C="\"Object\" "
+BackgroundBlur="\"Object\" \"Object.Render Transform.RenderTransform\" "
+MovieScene2DTransformTrack="\"Object\" "
+MovieScenePropertyTrack="\"Object\" "
+MovieSceneNameableTrack="\"Object\" "
+MovieSceneTrack="\"Object\" "
+MovieSceneDecorationContainerObject="\"Object\" "
+MovieSceneSignedObject="\"Object\" "
+MovieScene2DTransformSection="\"Object\" "
+MovieSceneSection="\"Object\" "
 
 [AssetEditorToolkitTabLocation]
 /Game/UI/MainMenu.MainMenu=1
@@ -3479,14 +3504,16 @@ PerWorldEditorSettings=(("/Game/Maps/NewMap.NewMap", (LoadedEditorRegions=((Min=
 Theme0=New Theme
 
 [RecentColors]
-Color0=(R=0.000000,G=1.000000,B=0.401042,A=0.565217)
-Color1=(R=0.000000,G=0.000000,B=0.000000,A=0.565217)
-Color2=(R=0.000000,G=0.000000,B=0.953125,A=0.565217)
-Color3=(R=0.000000,G=0.000000,B=1.000000,A=0.000000)
-Color4=(R=0.000000,G=0.000000,B=0.495466,A=0.000000)
-Color5=(R=0.000000,G=0.000000,B=0.000000,A=0.704348)
-Color6=(R=0.000000,G=0.000000,B=0.695111,A=0.000000)
-Color7=(R=300.000000,G=0.000000,B=1.000000,A=1.000000)
+Color0=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
+Color1=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
+Color2=(R=300.000000,G=0.000000,B=1.000000,A=1.000000)
+Color3=(R=0.000000,G=0.000000,B=0.695111,A=0.000000)
+Color4=(R=0.000000,G=0.000000,B=0.000000,A=0.704348)
+Color5=(R=0.000000,G=0.000000,B=0.495466,A=0.000000)
+Color6=(R=0.000000,G=0.000000,B=1.000000,A=0.000000)
+Color7=(R=0.000000,G=0.000000,B=0.953125,A=0.565217)
+Color8=(R=0.000000,G=0.000000,B=0.000000,A=0.565217)
+Color9=(R=0.000000,G=1.000000,B=0.401042,A=0.565217)
 
 [DetailCategoriesAdvanced]
 PropertyWrapper.Variable=False
