--- a/project/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/project/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -391,7 +391,7 @@ MRUItem0=/Game/Maps/MainmenuMap
 MRUItem1=/Game/MainmenuMap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
@@ -1866,7 +1866,7 @@ ContentBrowserDrawer.JumpMRU=/All
 ContentBrowserDrawer.JumpMRU=/Game
 ContentBrowserDrawer.JumpMRU=/All/Game/Maps/PlayerTestMap
 ContentBrowserDrawer.JumpMRU========
-ContentBrowserTab1.SelectedPaths=/Game/UI
+ContentBrowserTab1.SelectedPaths=/Game/Maps
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.IsLocked=False
@@ -3014,13 +3014,14 @@ BackgroundBlur.Accessibility=True
 BackgroundBlur.Appearance=True
 BackgroundBlur.Content=True
 BackgroundBlur.Layout=True
+Texture2D.Interchange =True
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/UI/Button_menu
-MRUItem1=/Game/UI/LevelSelectMenuWidget
-MRUItem2=/Game/UI/MainMenu
-MRUItem3=/Game/UI/ExitOptions
-MRUItem4=/Game/Maps/MainmenuMap
+MRUItem0=/Game/Maps/MainmenuMap
+MRUItem1=/Game/UI/Button_menu
+MRUItem2=/Game/UI/LevelSelectMenuWidget
+MRUItem3=/Game/UI/MainMenu
+MRUItem4=/Game/UI/ExitOptions
 MRUItem5=/Game/UI/UI_assets/Button_arrow
 MRUItem6=/Game/UI/UI_assets/RotF_logo_1_
 MRUItem7=/Engine/EngineFonts/Roboto
@@ -3159,7 +3160,7 @@ PanelWidget="\"Object\" \"Object.Layout.Slot.Object.Layout.Layout|Vertical Box S
 Widget="\"Object\" \"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" "
 Visual="\"Object\" \"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" "
 Object="\"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" "
-Object="\"Object\" \"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" "
+Object="\"Object\" "
 TextBlock="\"Object\" \"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" "
 TextLayoutWidget="\"Object\" \"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" "
 MassSettings="\"Object\" \"Object.Mass\" "
