--- a/project/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/project/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -60,8 +60,8 @@ CurrentAppliedTheme=134380265FBB4A9CA00A1DC9770217B8
 bEnableMiddleEllipsis=True
 
 [/Script/UnrealEd.LevelEditorPlaySettings]
-NewWindowWidth=1594
-NewWindowHeight=860
+NewWindowWidth=1194
+NewWindowHeight=680
 LastExecutedPlayModeType=PlayMode_InEditorFloating
 LaptopScreenResolutions=(Description="Apple MacBook Air 11",Width=1366,Height=768,AspectRatio="16:9",bCanSwapAspectRatio=True,ProfileName="")
 LaptopScreenResolutions=(Description="Apple MacBook Air 13\"",Width=1440,Height=900,AspectRatio="16:10",bCanSwapAspectRatio=True,ProfileName="")
@@ -108,7 +108,7 @@ PlayInEditorSoundQualityLevel=0
 bUseNonRealtimeAudioDevice=False
 bPreferToStreamLevelsInPIE=False
 bPromoteOutputLogWarningsDuringPIE=False
-NewWindowPosition=(X=160,Y=126)
+NewWindowPosition=(X=360,Y=216)
 PIEAlwaysOnTop=False
 DisableStandaloneSound=False
 AdditionalLaunchParameters=
@@ -135,13 +135,13 @@ bHMDForPrimaryProcessOnly=True
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=1594,Y=860)
+LastSize=(X=1194,Y=680)
 LastExecutedLaunchDevice=Windows@OSAO-EM00XEBF
 LastExecutedLaunchName=OSAO-EM00XEBF
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
-MultipleInstancePositions=(X=160,Y=126)
+MultipleInstancePositions=(X=360,Y=216)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 CurrentPosGridSize=0
@@ -393,11 +393,11 @@ MRUItem1=/Game/MainmenuMap
 [AssetEditorSubsystem]
 CleanShutdown=False
 DebuggerAttached=False
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=TextureEditor
 RecentAssetEditors=TextureEditor
 RecentAssetEditors=FontEditor
@@ -419,6 +419,7 @@ RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
+OpenAssetsAtExit=/Game/UI/MainMenu.MainMenu
 
 [RootWindow]
 ScreenPosition=X=317.000 Y=213.000
@@ -1866,7 +1867,7 @@ ContentBrowserDrawer.JumpMRU=/All
 ContentBrowserDrawer.JumpMRU=/Game
 ContentBrowserDrawer.JumpMRU=/All/Game/Maps/PlayerTestMap
 ContentBrowserDrawer.JumpMRU========
-ContentBrowserTab1.SelectedPaths=/Game/Maps
+ContentBrowserTab1.SelectedPaths=/Game/UI
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.IsLocked=False
@@ -3017,10 +3018,10 @@ BackgroundBlur.Layout=True
 Texture2D.Interchange =True
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Maps/MainmenuMap
-MRUItem1=/Game/UI/Button_menu
-MRUItem2=/Game/UI/LevelSelectMenuWidget
-MRUItem3=/Game/UI/MainMenu
+MRUItem0=/Game/UI/MainMenu
+MRUItem1=/Game/Maps/MainmenuMap
+MRUItem2=/Game/UI/Button_menu
+MRUItem3=/Game/UI/LevelSelectMenuWidget
 MRUItem4=/Game/UI/ExitOptions
 MRUItem5=/Game/UI/UI_assets/Button_arrow
 MRUItem6=/Game/UI/UI_assets/RotF_logo_1_
@@ -3156,11 +3157,11 @@ bNavigationToolVisible=False
 [DetailPropertyExpansion]
 Button="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.ImageSize\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.ImageSize\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings\" \"Object.Appearance.WidgetStyle.Disabled.OutlineSettings.Color\" \"Object.Render Transform.RenderTransform\" "
 ContentWidget="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.ImageSize\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.ImageSize\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings\" \"Object.Appearance.WidgetStyle.Disabled.OutlineSettings.Color\" \"Object.Render Transform.RenderTransform\" "
-PanelWidget="\"Object\" \"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" "
-Widget="\"Object\" \"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" "
-Visual="\"Object\" \"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" "
+PanelWidget="\"Object\" \"Object.Render Transform.RenderTransform\" "
+Widget="\"Object\" \"Object.Render Transform.RenderTransform\" "
+Visual="\"Object\" \"Object.Render Transform.RenderTransform\" "
 Object="\"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.Render Transform.RenderTransform\" "
 TextBlock="\"Object\" \"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" "
 TextLayoutWidget="\"Object\" \"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" "
 MassSettings="\"Object\" \"Object.Mass\" "
@@ -3178,7 +3179,7 @@ ActorComponent="\"Object\" "
 MainMenu_C="\"Object\" "
 UserWidget="\"Object\" \"Object.Render Transform.RenderTransform\" "
 CanvasPanel="\"Object\" \"Object.Render Transform.RenderTransform\" "
-VerticalBox="\"Object\" \"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" "
+VerticalBox="\"Object\" \"Object.Render Transform.RenderTransform\" "
 HorizontalBox="\"Object\" \"Object.Render Transform.RenderTransform\" "
 OptionsMenuWB_C="\"Object\" "
 K2Node_SwitchInteger="\"Object\" "
@@ -3502,16 +3503,16 @@ PerWorldEditorSettings=(("/Game/Maps/NewMap.NewMap", (LoadedEditorRegions=((Min=
 Theme0=New Theme
 
 [RecentColors]
-Color0=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
-Color1=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
-Color2=(R=300.000000,G=0.000000,B=1.000000,A=1.000000)
-Color3=(R=0.000000,G=0.000000,B=0.695111,A=0.000000)
-Color4=(R=0.000000,G=0.000000,B=0.000000,A=0.704348)
+Color0=(R=0.000000,G=0.000000,B=0.000000,A=0.895652)
+Color1=(R=0.000000,G=1.000000,B=0.401042,A=0.565217)
+Color2=(R=0.000000,G=0.000000,B=0.000000,A=0.565217)
+Color3=(R=0.000000,G=0.000000,B=0.953125,A=0.565217)
+Color4=(R=0.000000,G=0.000000,B=1.000000,A=0.000000)
 Color5=(R=0.000000,G=0.000000,B=0.495466,A=0.000000)
-Color6=(R=0.000000,G=0.000000,B=1.000000,A=0.000000)
-Color7=(R=0.000000,G=0.000000,B=0.953125,A=0.565217)
-Color8=(R=0.000000,G=0.000000,B=0.000000,A=0.565217)
-Color9=(R=0.000000,G=1.000000,B=0.401042,A=0.565217)
+Color6=(R=0.000000,G=0.000000,B=0.000000,A=0.704348)
+Color7=(R=0.000000,G=0.000000,B=0.695111,A=0.000000)
+Color8=(R=300.000000,G=0.000000,B=1.000000,A=1.000000)
+Color9=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 
 [DetailCategoriesAdvanced]
 PropertyWrapper.Variable=False
